# MinGfx

./: .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE  README.md
cmake/: AutoBuild.cmake  AutoBuildNanoGUI.cmake  ExternalProjectDownloadBuildInstall.cmake  MinGfxConfig.cmake.in  UseNanoGUI.cmake
cmake/Modules/: FindDoxygen.cmake  FindNanoGUI.cmake
doc/: Doxyfile.in  DoxygenLayout.xml  api.md  customdoxygen.css  index.html  installation.md  mainpage.md
docs/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  aabb_8h.html  aabb_8h_source.html  annotated.html  api.html  api_8md.html  api_8md_source.html  bvh_8h.html  bvh_8h_source.html  class_min_gfx_1_1_color-members.html  class_min_gfx_1_1_color.html  class_min_gfx_1_1_default_shader-members.html  class_min_gfx_1_1_default_shader.html  class_min_gfx_1_1_default_shader_1_1_light_properties-members.html  class_min_gfx_1_1_default_shader_1_1_light_properties.html  class_min_gfx_1_1_default_shader_1_1_material_properties-members.html  class_min_gfx_1_1_default_shader_1_1_material_properties.html  class_min_gfx_1_1_draw-members.html  class_min_gfx_1_1_draw.html  class_min_gfx_1_1_graphics_app-members.html  class_min_gfx_1_1_graphics_app.html  class_min_gfx_1_1_matrix4-members.html  class_min_gfx_1_1_matrix4.html  class_min_gfx_1_1_mesh-members.html  class_min_gfx_1_1_mesh.html  class_min_gfx_1_1_platform-members.html  class_min_gfx_1_1_platform.html  class_min_gfx_1_1_point2-members.html  class_min_gfx_1_1_point2.html  class_min_gfx_1_1_point3-members.html  class_min_gfx_1_1_point3.html  class_min_gfx_1_1_ray-members.html  class_min_gfx_1_1_ray.html  class_min_gfx_1_1_shader_program-members.html  class_min_gfx_1_1_shader_program.html  class_min_gfx_1_1_texture2_d-members.html  class_min_gfx_1_1_texture2_d.html  class_min_gfx_1_1_uni_cam-members.html  class_min_gfx_1_1_uni_cam.html  (+192 more)
docs/html/html/: aabb_8h.html  bvh_8h.html  classmingfx_1_1_a_a_b_b-members.html  classmingfx_1_1_a_a_b_b.html  classmingfx_1_1_b_v_h.html  classmingfx_1_1_color-members.html  classmingfx_1_1_color.html  classmingfx_1_1_craft_cam-members.html  classmingfx_1_1_craft_cam.html  classmingfx_1_1_default_shader_1_1_light_properties-members.html  classmingfx_1_1_default_shader_1_1_material_properties-members.html  classmingfx_1_1_default_shader_1_1_material_properties.html  classmingfx_1_1_gfx_math-members.html  classmingfx_1_1_gfx_math.html  classmingfx_1_1_graphics_app-members.html  classmingfx_1_1_graphics_app.html  classmingfx_1_1_matrix4.html  classmingfx_1_1_mesh-members.html  classmingfx_1_1_mesh.html  classmingfx_1_1_platform-members.html  classmingfx_1_1_point2-members.html  classmingfx_1_1_point3-members.html  classmingfx_1_1_point3.html  classmingfx_1_1_quaternion-members.html  classmingfx_1_1_ray-members.html  classmingfx_1_1_shader_program-members.html  classmingfx_1_1_shader_program.html  classmingfx_1_1_text_shader.html  classmingfx_1_1_text_shader_1_1_text_format-members.html  classmingfx_1_1_vector2.html  classmingfx_1_1_vector3-members.html  color_8h.html  color_8h_source.html  default__shader_8h_source.html  doxygen.css  files.html  functions_b.html  functions_c.html  functions_e.html  functions_enum.html  (+45 more)
docs/html/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  (+69 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  (+75 more)
example/: CMakeLists.txt  CircleViewer.cpp  CircleViewer.h  main-circleviewer.cpp
example/cmake/: DownloadHelper.txt.in  UseOpenGL.cmake
src/: .gitignore  CMakeLists.txt  GraphicsApp.cpp  GraphicsApp.h  aabb.cc  aabb.h  bvh.cc  bvh.h  color.cc  color.h  craft_cam.cc  craft_cam.h  default_shader.cc  default_shader.h  draw.cc  draw.h  gfxmath.cc  gfxmath.h  gl_points_and_lines.cc  gl_points_and_lines.h  graphics_app.cc  graphics_app.h  matrix4.cc  matrix4.h  mesh.cc  mesh.h  mingfx.h  mingfx_config.h.in  opengl_headers.h  platform.cc  platform.h  point2.cc  point2.h  point3.cc  point3.h  quaternion.cc  quaternion.h  quick_shapes.cc  quick_shapes.h  ray.cc  (+13 more)
src/shaders/: default.frag  default.vert  fullscreen.frag  fullscreen.vert  phong.frag  phong.vert  phongtex.frag  text.frag  text.vert
tests/blank_window/: CMakeLists.txt  main.cc
tests/blankwindow/: CMakeLists.txt  main-blankwindow.cpp  main.cc
tests/circleviewer/: CMakeLists.txt  circle_viewer.cc  circle_viewer.h  main-circleviewer.cpp  main.cc
tests/gui_plus_opengl/: CMakeLists.txt  gui_plus_opengl.cc  gui_plus_opengl.h  main.cc
